# rs-chip

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  working_notebook.ipynb
.github/: release.yml
.github/workflows/: main.yml  publish.yml
rs_chipper/: chip_image.py  chip_image_to_npz.py  load_scaler.py  remove_background_only.py  sample_image_pixels.py  standard_scale_array.py
rschip/: __init__.py  apply_scaler.py  chip_image.py  chip_image_to_npz.py  image_chip.py  remove_background_only.py  sample_image_pixels.py  segmentation_mask.py
src/rschip/: __init__.py  check_background.py  image_chip.py  remove_background_only.py  segmentation_mask.py  split_train_val_test.py
tests/: test_check_background.py  test_image_chip.py  test_imagechip.py  test_remove_background_only.py  test_segmentation_mask.py  test_split_train_val_test.py
tests/data/: test_features.gpkg  test_img.tif
