[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rschip"
version = "0.1.0"
description = "Tile or chip large satellite images for use with deep learning models"
readme = "README.md"
readme-content-type = "text/markdown"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "thomaswilson81@gmail.com" },
]
keywords = ["satellite", "deep learning", "tiling", "segmentation", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rasterio",
    "numpy",
    "geopandas",
    "shapely",
]
requires-python = ">=3.6"

[project.optional-dependencies]
test = [
    "pytest",
]
lint = [
    "flake8",
    "black",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    ".venv",
]